--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/logo.png
+    - lib/assets/logo.png
+    - lib/assets/partner1.jpg
+    - lib/assets/partner2.jpg
+    - lib/assets/partner3.jpg
+    - lib/assets/dogecoin.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
