--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
 
   shared_preferences: ^0.5.3+4
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
