--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - lib/assets/logo.png
+    - lib/assets/randombox.jpg
     - lib/assets/partner1.jpg
     - lib/assets/partner2.jpg
     - lib/assets/partner3.jpg
